# blitz

./: .cvsignore  .gitignore  .travis.yml  .travis.yml.off  AUTHORS  CMakeLists.txt  COPYING  COPYRIGHT  ChangeLog  ChangeLog.0  ChangeLog.1  INSTALL  LEGAL  LICENSE  Makefile.am  Makefile.in  NEWS  README  README-VS.NET  README-VS.NET.txt  README.binutils  README.md  TODO  acinclude.m4  aclocal.m4  appveyor.yml  config.guess  config.h.in  configure  configure.ac  configure.in  sd_test.sh  test.cc
benchmarks/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  acou3d.cpp  acou3db1.cpp  acou3db2.cpp  acou3db3.cpp  acou3db4.cpp  acou3df.f  acou3df2.f  acou3df90.f  acou3df90.f90  acou3df902.f  acou3df902.f90  acoustic.cpp  acousticf.f  acousticf2.f  acousticf90.f  acousticf902.f  arrdaxpy.cpp  arrdaxpy.m  arrdaxpy2.m  arrdaxpyf.f  arrexpr1.cpp  arrexpr1.m  cfd.cpp  cfdf.f  cfortran.h  chunky.cpp  ct.cpp  ctime-results  ctime1.cpp  ctime1v.cpp  ctime2.cpp  ctime2v.cpp  ctime3.cpp  ctime3v.cpp  ctime4.cpp  (+198 more)
blitz/: .cvsignore  Array.h  CMakeLists.txt  Makefile.am  Makefile.in  README  TinyMat.h  TinyVec.h  Vector.h  applics.h  array-impl.h  array-old.h  array-only.h  array.cc  array.h  bench.cc  bench.h  benchext.cc  benchext.h  blitz.h  bounds.h  bzconfig.h  bzdebug.h  compiler.h  config-VS.NET2003.h  config-egcs.h  config-g++3.h  config.cmake.h.in  config.h  config.h.in  constpointerstack.h  et-forward.h  etbase.h  extremum.h  funcs.h  globeval.cc  indexexpr.h  indexmap-forward.h  indexpar.h  levicivita.h  (+103 more)
blitz/array/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  asexpr.cc  asexpr.h  bops.cc  cartesian.h  cgsolve.h  complex.cc  convolve.cc  convolve.h  cycle.cc  domain.h  et.h  eval.cc  expr.cc  expr.h  fastiter.h  funcs.h  functorExpr.h  geometry.h  indirect.h  interlace.cc  io.cc  iter.h  map.h  methods.cc  misc.cc  multi.h  newbops.cc  newet-macros-old.h  newet-macros.h  newet.h  ops.cc  ops.h  reduce.cc  reduce.h  resize.cc  shape.h  (+12 more)
blitz/generate/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  arroperands.h  bzfstream.h  genarrbops.cpp  genarruops.cpp  genmatbops.cpp  genmathfunc.cpp  genmatuops.cpp  genpromote.cpp  genstencils.py  genvecbfn.cpp  genvecbops.cpp  genvecuops.cpp  genvecwhere.cpp  makeloops.py  operands.h  operands2.h
blitz/meta/: CMakeLists.txt  Makefile.am  Makefile.in  dot.h  matassign.h  matmat.h  matvec.h  metaprog.h  product.h  sum.h  vecassign.h
compiler/: .cvsignore  CMakeLists.txt  LEGAL  Makefile.am  Makefile.in  README  bool.cpp  bzconfig  climits.cpp  cmthscop.cpp  complex.cpp  compmath.cpp  constcst.cpp  cstd.cpp  default.cpp  dynamic.cpp  elabbase.cpp  elabret.cpp  enumcmp2.cpp  enumcomp.cpp  except.cpp  explicit.cpp  fullspec.cpp  getruse.cpp  ieeemath.cpp  instant.cpp  mathscop.cpp  membcnst.cpp  membtmp2.cpp  membtmpl.cpp  mutable.cpp  namespac.cpp  nontype.cpp  numlimit.cpp  numtrait.cpp  oldfor.cpp  partial.cpp  porder.cpp  promote.cpp  reinterp.cpp  (+15 more)
config/: .cvsignore  (+3 more)
doc/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  about.texi  arrays-ctors.texi  arrays-debug.texi  arrays-expr.texi  arrays-globals.texi  arrays-indirect.texi  arrays-intro.texi  arrays-io.texi  arrays-members.texi  arrays-multi.texi  arrays-slicing.texi  arrays-stencils.texi  arrays-storage.texi  arrays-types.texi  arrays-usertype.texi  blitz.info  blitz.texi  compiling.texi  copyright.texi  download.texi  faq.texi  help.texi  indirect.fig  indirect.txt  install.texi  legal.texi  makedatestring  numinquire.texi  parallel.texi  platforms.texi  random.texi  sinsoid.txt  slice.fig  stamp-vti  strideslice.fig  tensor1.eps  (+3 more)
doc/doxygen/: .cvsignore  CMakeLists.txt  Doxyfile.in  Makefile.am  Makefile.in  blitz.doxygen
doc/examples/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  cast.cpp  cast.out  cast.texi  debug.out  debug.texi  dump.out  dump.texi  fixed-class.cpp  fixed-point.h  fixed-point.texi  fixed.cpp  fixed.out  fixed.texi  io.cpp  io.data  io.out  io.texi  makefile.example  outer.cpp  outer.out  outer.texi  output.out  output.texi  range.cpp  range.out  range.texi  simple.out  simple.texi  slicing.cpp  slicing.out  slicing.texi  storage.cpp  storage.out  storage.texi  strideslice.out  strideslice.texi  (+2 more)
doc/stencils/: .cvsignore  CMakeLists.txt  Laplacian2D.texi  Laplacian2D4.texi  Makefile.am  Makefile.in  backward11.texi  backward12.texi  backward21.texi  backward22.texi  backward31.texi  backward32.texi  backward41.texi  backward42.texi  central12.texi  central14.texi  central22.texi  central24.texi  central32.texi  central34.texi  central42.texi  central44.texi  dump-stencil.cpp  forward11.texi  forward12.texi  forward21.texi  forward22.texi  forward31.texi  forward32.texi  forward41.texi  forward42.texi
examples/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  array.cpp  cartesian.cpp  cast.cpp  cfd.cpp  complex-test.cpp  complex.cpp  convolve.cpp  curldiv.cpp  deriv.cpp  diff.cpp  erf.cpp  fdtd.cpp  fixed.cpp  flags.cpp  fourier.cpp  indirect.cpp  input.cpp  io.cpp  iter.cpp  matmult.cpp  nested.cpp  numinquire.cpp  outer.cpp  pauli.cpp  pick.cpp  polymorph.cpp  prettyprint.cpp  profile.cpp  qcd.cpp  rand2.cpp  random.cpp  rangexpr.cpp  redblack.cpp  reduce.cpp  simple.cpp  slicing.cpp  (+13 more)
lib/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  readme.txt
src/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  globals.cpp
testsuite/: .cvsignore  64bit.cpp  Adnene-Ben-Abdallah-1.cpp  Adnene-Ben-Abdallah-2.cpp  CMakeLists.txt  Josef-Wagenhuber.cpp  Makefile.am  Makefile.in  Olaf-Ronneberger-1.cpp  Ulisses-Mello-1.cpp  alignment.cpp  arrayinitialize.cpp  arrayresize.cpp  bitwise.cpp  cast.cpp  chris-jeffery-1.cpp  chris-jeffery-2.cpp  chris-jeffery-3.cpp  complex-test.cpp  complex.cpp  constarray.cpp  contiguous.cpp  copy.cpp  ctors.cpp  declfunc.cpp  derrick-bass-1.cpp  derrick-bass-3.cpp  exprctor.cpp  expression-slicing.cpp  extract.cpp  free.cpp  gary-huber-1.cpp  indexexpr-base.cpp  initialize.cpp  int-math-func.cpp  interlace.cpp  iter.cpp  levicivita.cpp  loop1.cpp  matthias-troyer-1.cpp  (+52 more)
(+318 files in other folders)
